src/tests/snapshots/gitu__tests__reset__reset_hard.snap
---
source: src/tests/reset.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: a4911a849846825f
