src/tests/snapshots/gitu__tests__reset__reset_mixed.snap
---
source: src/tests/reset.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Untracked files                                                                |
 unwanted-file                                                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: ae83340bf6db88c3
