src/tests/snapshots/gitu__tests__reset__reset_soft.snap
---
source: src/tests/reset.rs
expression: ctx.redact_buffer()
---
▌main                                                                           |
                                                                                |
 Staged changes (1)                                                             |
 added      unwanted-file                                                       |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: d8581fa6cd9b2eab
